Fix alignment of team tabs

--- a/style/main.css
+++ b/style/main.css
@@ -17,11 +17,6 @@ body .site-content{
   margin: auto;
 }
 
-@media (min-width: 1200px) {
-.bootstrap-iso .container {
-    width: 1250px !important;
-  }
-}
 @keyframes pulse {
   0% { margin-top: 20px; }
   50% { margin-top: 0; }
